
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIGKILL ;
 int SIGSTOP ;
 int cpid ;
 int errno ;
 int fflush (int ) ;
 int fprintf (int ,char*,char const*,...) ;
 scalar_t__ fstop ;
 int kill (int ,int) ;
 int libname ;
 int printf (char*) ;
 int stdout ;
 scalar_t__ strerror (int ) ;
 int unlink (int ) ;

void fatal(const char *message, int critical)
{
int sig = critical? SIGSTOP : (fstop? SIGSTOP : SIGKILL);

 if(!errno) {
  fprintf(stdout, "\n[-] FAILED: %s ", message);
 } else {
  fprintf(stdout, "\n[-] FAILED: %s (%s) ", message,
   (char*) (strerror(errno)) );
 }
 if(critical)
  printf("\nCRITICAL, entering endless loop");
 printf("\n");
 fflush(stdout);

 unlink(libname);
 kill(cpid, SIGKILL);
 for(;;) kill(0, sig);
}
